Update player-info and computer-info text align center

--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ header {
   justify-content: center;
 }
 
+#player-info,
+#computer-info {
+  text-align: center;
+}
+
 .player-choice,
 .opponent-choice {
   margin: 10px;
