--- a/style.css
+++ b/style.css
@@ -57,3 +57,53 @@ header {
   min-height: 100px;
   margin: 10px;
 }
+
+.modal-container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: rgb(70, 70, 247);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  height: 150px;
+  width: 300px;
+  max-width: 80%;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 1;
+  background-color: rgb(70, 70, 247);
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal,
+.try-again {
+  text-align: center;
+  margin: 0 10px 0 10px;
+}
+
+.try-again {
+  background-color: rgb(70, 70, 247);
+}
+
+#overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+  transition: 200ms ease-in-out;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
