--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header {
   height: 10vh;
   border: 1px solid black;
   background-color: rgb(0, 0, 119);
+  width: 100%;
 }
 
 .message {
@@ -82,12 +83,12 @@ header {
 }
 
 .modal,
-.try-again {
+.play-again {
   text-align: center;
   margin: 0 10px 0 10px;
 }
 
-.try-again {
+.play-again {
   background-color: rgb(70, 70, 247);
   color: white;
 }
@@ -107,4 +108,19 @@ header {
 .overlay.active {
   opacity: 1;
   pointer-events: all;
+}
+
+@media screen and (max-width: 429px) {
+  .choices {
+    grid-template-columns: repeat(3, 100px);
+  }
+
+  .choices > button {
+    min-width: 80px;
+  }
+
+  header {
+    width: 100%;
+    text-align: center;
+  }
 }
